--- a/bostoncreamcupcakes.html
+++ b/bostoncreamcupcakes.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Recipes Curated by Emily</title>
-  <link rel="icon" href="img/images/logo.png" type="image/png" sizes="16x16"/>
-  <link href="img/css/tastebite-styles.css" rel="stylesheet" type="text/css" media="all">
+  <link rel="icon" href="assets/images/logo.png" type="image/png" sizes="16x16"/>
+  <link href="assets/css/tastebite-styles.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
 <section class="tstbite-section p-0">
@@ -13,10 +13,10 @@
     <header class="tstbite-header bg-white">
       <nav class="navbar navbar-expand-lg has-header-inner px-0">
         <a class="navbar-brand" href="https://emuhly.com">
-          <img src="img/images/emuhly.png" style="max-width: 100px;" alt="Emuhly">
+          <img src="assets/images/emuhly.png" style="max-width: 100px;" alt="Emuhly">
         </a>
         <div class="tstbite-header-links d-flex align-items-center ms-auto order-0 order-lg-2">
-          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="img/images/icon.png" alt="Avatar"></a>
+          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/icon.png" alt="Avatar"></a>
         </div>
         <button class="navbar-toggler pe-0 ms-2 ms-md-3" type="button" data-bs-toggle="collapse" data-bs-target="#menu-4" aria-controls="menu-4" aria-expanded="false" aria-label="Toggle navigation">
           <svg data-name="Icon/Hamburger" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -57,7 +57,7 @@
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="img/images/menus/bostoncreamcupcakes.png" class="w-100" alt="Menu">
+          <img src="assets/images/menus/bostoncreamcupcakes.png" class="w-100" alt="Menu">
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
@@ -258,7 +258,7 @@
         <div class="col-md-6">
           <div class="tastebite-footer-contnet pe-0 pe-lg-5 me-0 me-md-5">
             <a href="/">
-              <img src="img/images/emuhlytransparent.png" style="max-width: 125px;" alt="Emuhly">
+              <img src="assets/images/emuhlytransparent.png" style="max-width: 125px;" alt="Emuhly">
             </a>
           </div>
         </div>
@@ -297,11 +297,11 @@
   </footer>
 </section>
 
-<script src="img/js/bootstrap.bundle.min.js"></script>
-<script src="img/js/html5.min.js"></script>
-<script src="img/js/sticky.min.js"></script>
-<script src="img/js/swiper-bundle.min.js"></script>
-<script src="img/js/masonry.min.js"></script>
-<script src="img/js/tastebite-scripts.js"></script>
+<script src="assets/js/bootstrap.bundle.min.js"></script>
+<script src="assets/js/html5.min.js"></script>
+<script src="assets/js/sticky.min.js"></script>
+<script src="assets/js/swiper-bundle.min.js"></script>
+<script src="assets/js/masonry.min.js"></script>
+<script src="assets/js/tastebite-scripts.js"></script>
 </body>
 </html>
