--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Recipes Curated by Emily</title>
-  <link rel="icon" href="assets/images/logo.png" type="image/png" sizes="16x16"/>
+  <link rel="icon" href="assets/images/logos/logo.png" type="image/png" sizes="16x16"/>
   <link href="assets/css/tastebite-styles.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
@@ -16,7 +16,7 @@
           <img src="assets/images/logos/emuhly.png" style="max-width: 100px;" alt="Emuhly">
         </a>
         <div class="tstbite-header-links d-flex align-items-center ms-auto order-0 order-lg-2">
-          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/icon.png" alt="Avatar"></a>
+          <a href="/" class="ms-4 ms-md-4 me-2 me-md-0 circle"><img src="assets/images/logos/icon.png" alt="Avatar"></a>
         </div>
         <button class="navbar-toggler pe-0 ms-2 ms-md-3" type="button" data-bs-toggle="collapse" data-bs-target="#menu-4" aria-controls="menu-4" aria-expanded="false" aria-label="Toggle navigation">
           <svg data-name="Icon/Hamburger" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -160,7 +160,7 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/comingsoon" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/menus/savoryicon.png" class="rounded-circle" alt="Menu">
+              <img src="assets/images/menus/savorylogos/icon.png" class="rounded-circle" alt="Menu">
             </a>
             <figcaption class="mt-2">
               <a href="/comingsoon" class="tstbite-category-title">Savory</a>
