--- a/hazelnuttruffles.html
+++ b/hazelnuttruffles.html
@@ -170,23 +170,23 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 350°F and line a baking sheet with parchment paper. Set aside.
+                  Line a baking sheet with parchment paper. Set aside.
                 </li>
                 <li>
                   <span>2</span>
-                  Add egg whites and salt to the bowl of a stand mixer. Gradually add sugar while continously beating on medium speed for roughly 17 minutes, or until stiff peaks appear.
+                  Place hazelnuts and hazelnut wafers in a food processor. Blend for 30 seconds, or until desired grain size.
                 </li>
                 <li>
                   <span>3</span>
-                  Add lemon juice, then beat for an additional minute.
+                  Add hazelnut spread and blend for another 30 seconds.
                 </li>
                 <li>
                   <span>4</span>
-                  Using two big spoons, spoon out the mixture into 12 meringues onto the parchment paper.
+                  Using your hands or an ice cream scoop, form mixture into either 7 large truffles of 14 small truffles and place them on the baking sheet.
                 </li>
                 <li>
                   <span>5</span>
-                  Transfer the baking sheet to the oven and immediately lower the oven temperature to 200°F. Bake for 1 hour, or until tops are a light golden brown.
+                  Transfer the baking sheet to the refrigerator and chill the truffles for at least 15 minutes.
                 </li>
               </ul>
             </div>
