--- a/butterbars.html
+++ b/butterbars.html
@@ -149,21 +149,37 @@
             <div class="mt-4 mt-md-5">
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
+                <strong>Crust</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">3 large eggs, room temperature</label>
+                  <label class="form-check-label" for="crackers">1 box vanilla cake mix or yellow cake mix (I use the brands ____ and _____, found here)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">280g granulated sugar</label>
+                  <label class="form-check-label" for="unsalted">1 stick of butter, room temperature</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1/4 teaspoon lemon juice</label>
+                  <label class="form-check-label" for="unsalted">1 large egg</label>
+                </div>
+              </div>
+              <div class="checklist pb-4">
+                <strong>Gooey Filling</strong>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
+                  <label class="form-check-label" for="crackers">1 package (8oz) cream cheese, room temperature</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">Pinch of salt</label>
+                  <label class="form-check-label" for="unsalted">16oz powdered sugar</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">2 large eggs</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 tsp vanilla extract</label>
                 </div>
               </div>
             </div>
@@ -174,23 +190,40 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 350°F and line a baking sheet with parchment paper. Set aside.
+                  Preheat oven to 325°F and prepare a 9x13-inch baking dish with non-stick cooking spray. Set aside.
                 </li>
+              </ul>
+              <ul class="instruction-list list-unstyled">
+                <strong>Crust</strong>
                 <li>
                   <span>2</span>
-                  Add egg whites and salt to the bowl of a stand mixer. Gradually add sugar while continously beating on medium speed for roughly 17 minutes, or until stiff peaks appear.
+                  Mix vanilla cake mix, butter, and egg in a large bowl with a fork until mixed together as thoroughly as possible. The texture of the mixture will be dry and clumpy.
                 </li>
                 <li>
                   <span>3</span>
-                  Add lemon juice, then beat for an additional minute.
+                   Transfer the mixture to the greased pan. Press the mixture down with your hands, covering the bottom of the pan as well as slightly up the sides of the pan.
                 </li>
+              </ul>
+              <ul class="instruction-list list-unstyled">
+                <strong>Gooey Filling</strong>
                 <li>
                   <span>4</span>
-                  Using two big spoons, spoon out the mixture into 12 meringues onto the parchment paper.
+                  Set aside about 1/4 cup of the powdered sugar. When you're done mixing, the goo in the bowl should be nice and creamy.
                 </li>
                 <li>
                   <span>5</span>
-                  Transfer the baking sheet to the oven and immediately lower the oven temperature to 200°F. Bake for 1 hour, or until tops are a light golden brown.
+                  In a large bowl, mix the softened cream cheese, eggs, and vanilla. Slowly add in the remaining powdered sugar while mixing. When you're done mixing, the filling should be nice and creamy.
+                </li>
+              </ul>
+              <ul class="instruction-list list-unstyled">
+                <strong>Assembly</strong>
+                <li>
+                  <span>6</span>
+                  Pour the filling over the crust in the pan. Bake for 40 to 45 minutes, or until the top is golden brown.
+                </li>
+                <li>
+                  <span>7</span>
+                  Remove bars from the oven and let them cool. The filling will appear puffy, but will settle upon cooling. After about 10 minutes or so, sprinkle the remaining 1/4 cup powdered sugar over the top. Cool completely before serving.
                 </li>
               </ul>
             </div>
