--- a/monkeybread.html
+++ b/monkeybread.html
@@ -220,9 +220,10 @@
             <div class="mt-5">
               <h6>Instructions</h6>
               <ul class="instruction-list list-unstyled">
+                <strong>Dough</strong>
                 <li>
                   <span>1</span>
-                  <b>Make the dough:</b> Mix together the flour, quick-rise yeast, sugar, and salt in a mixing bowl. Put the oil together with the warm milk (110℉) in a glass measuring cup. Slowly add all the oil and milk into the flour mixture while mixing to form a loose dough. Turn onto a lightly floured counter and knead until a smooth dough forms - about 1 minute of kneading.
+                  Mix together the flour, quick-rise yeast, sugar, and salt in a mixing bowl. Put the oil together with the warm milk (110℉) in a glass measuring cup. Slowly add all the oil and milk into the flour mixture while mixing to form a loose dough. Turn onto a lightly floured counter and knead until a smooth dough forms - about 1 minute of kneading.
                 </li>
                 <li>
                   <span>2</span>
@@ -244,9 +245,12 @@
                   <span>6</span>
                   Bake the muffins immediately in the preheated oven for 15-17 minutes or until bubbly and fully cooked on the inside. Let cool in the pan for at least 10 minutes before topping with frosting if desired. Enjoy!
                 </li>
+              </ul>
+              <ul class="instruction-list list-unstyled">
+                <strong>Frosting</strong>
                 <li>
                   <span>7</span>
-                  <b>Make the frosting:</b> Beat the butter and cream cheese in a medium bowl with an electric mixer until blended. Add powdered sugar, half-and-half, and vanilla extract, and mix until smooth. Drizzle over warm monkey bread.
+                  Beat the butter and cream cheese in a medium bowl with an electric mixer until blended. Add powdered sugar, half-and-half, and vanilla extract, and mix until smooth. Drizzle over warm monkey bread.
                 </li>
                 <li>
                   <span>8</span>
