--- a/butterbars.html
+++ b/butterbars.html
@@ -140,7 +140,7 @@
               </li>
               <li>
                 <small>Serving</small>
-                <span>12 meringues
+                <span>24 bars
                 </span>
               </li>
             </ul>
