--- a/butterbars.html
+++ b/butterbars.html
@@ -152,7 +152,7 @@
                 <strong>Crust</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 box vanilla cake mix or yellow cake mix (I use the brands ____ and _____, found here)</label>
+                  <label class="form-check-label" for="crackers">1 box vanilla cake mix or yellow cake mix (I use the brands <a href="https://www.wholefoodsmarket.com/product/european-bakery-vanilla-organic-cake-mix-1525-oz-b000vk2cly">European Gourmet Bakery</a>, <a href="https://www.wholefoodsmarket.com/product/annies-homegrown-organic-classic-yellow-cake-mix-21-oz-b07bb1wlj8">Annie's</a>, and <a href="https://www.wholefoodsmarket.com/product/arrowhead-mills-organic-vanilla-cake-mix-b00zkupl6i">Arrowhead Mills</a>)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
@@ -223,7 +223,7 @@
                 </li>
                 <li>
                   <span>7</span>
-                  Remove bars from the oven and let them cool. The filling will appear puffy, but will settle upon cooling. After about 10 minutes or so, sprinkle the remaining 1/4 cup powdered sugar over the top. Cool completely before serving.
+                  Remove the bars from the oven and let them cool. The filling will appear puffy, but will settle upon cooling. After about 10 minutes or so, sprinkle the remaining 1/4 cup powdered sugar over the top. Cool completely before serving.
                 </li>
               </ul>
             </div>
