--- a/monkeybread.html
+++ b/monkeybread.html
@@ -243,7 +243,7 @@
                 </li>
                 <li>
                   <span>6</span>
-                  Bake the muffins immediately in the preheated oven for 15-17 minutes or until bubbly and fully cooked on the inside. Let cool in the pan for at least 10 minutes before topping with frosting if desired. Enjoy!
+                  Bake the muffins immediately in the preheated oven for 15-17 minutes or until bubbly and fully cooked on the inside. Let cool in the pan for at least 10 minutes before topping with frosting if desired.
                 </li>
               </ul>
               <ul class="instruction-list list-unstyled">
