--- a/bostoncreamcupcakes.html
+++ b/bostoncreamcupcakes.html
@@ -178,10 +178,9 @@
                 </li>
               </ul>
               <ul class="instruction-list list-unstyled">
-                <strong>Custard</strong>
                 <li>
                   <span>2</span>
-                  Combine milk, cream, 1/6 cup sugar, and salt in a medium-sized saucepan over medium heat. Stir frequently until sugar is dissolved and mixture begins to simmer. Remove from heat and allow to cool for 10 minutes.
+                  <b>For the custard: </b>Combine milk, cream, 1/6 cup sugar, and salt in a medium-sized saucepan over medium heat. Stir frequently until sugar is dissolved and mixture begins to simmer. Remove from heat and allow to cool for 10 minutes.
                 </li>
                 <li>
                   <span>3</span>
@@ -201,10 +200,9 @@
                 </li>
                 </ul>
                 <ul class="instruction-list list-unstyled">
-                <strong>Cupcakes</strong>
                 <li>
                   <span>10</span>
-                  With an electric or stand mixer, beat together butter, oil, and sugar until light, fluffy, and well-combined (about 30 seconds on medium/high speed).
+                  <b>For the cupcakes: </b>With an electric or stand mixer, beat together butter, oil, and sugar until light, fluffy, and well-combined (about 30 seconds on medium/high speed).
                 </li>
                 <li>
                   <span>11</span>
@@ -224,10 +222,9 @@
                 </li>
                 </ul>
                 <ul class="instruction-list list-unstyled">
-                <strong>Assembly</strong>
                 <li>
                   <span>15</span>
-                  Once cupcakes are cooled and pastry cream is chilled, fill a large piping bag fitted with a round tip (or use a ziploc bag with a corner cut off) with pastry cream. Use a knife to cut a 1 1/2" wide and 1" deep cavity into each cupcake (don’t cut all the way to the bottom!). Remove this core from your cupcake and then slice off the bottom so only a 1/4" thick piece of the surface remains (see pictures in post or video for a visual).
+                  <b>To assemble: </b>Once cupcakes are cooled and pastry cream is chilled, fill a large piping bag fitted with a round tip (or use a ziploc bag with a corner cut off) with pastry cream. Use a knife to cut a 1 1/2" wide and 1" deep cavity into each cupcake (don’t cut all the way to the bottom!). Remove this core from your cupcake and then slice off the bottom so only a 1/4" thick piece of the surface remains (see pictures in post or video for a visual).
                 </li>
                 <li>
                   <span>16</span>
