--- a/chocolatechipcookiecake.html
+++ b/chocolatechipcookiecake.html
@@ -143,10 +143,9 @@
                 </li>
               </ul>
               <ul class="instruction-list list-unstyled">
-                <strong>Cookie Cake</strong>
                 <li>
                   <span>2</span>
-                  In a large bowl using a hand-held mixer or stand mixer fittedwith paddle attachment, beat the butter for 1 minute on medium speed until completely smooth and creamy. Add the brown sugar and beat on medium speed until creamy, about 1 minute. Mix in egg, egg yolk, and vanilla on medium-high speed until combined. Scrape down the sides and bottom of the bowl as needed.
+                  <b>For the cookie cake: </b>In a large bowl using a hand-held mixer or stand mixer fittedwith paddle attachment, beat the butter for 1 minute on medium speed until completely smooth and creamy. Add the brown sugar and beat on medium speed until creamy, about 1 minute. Mix in egg, egg yolk, and vanilla on medium-high speed until combined. Scrape down the sides and bottom of the bowl as needed.
                 </li>
                 <li>
                   <span>3</span>
