--- a/creampuffs.html
+++ b/creampuffs.html
@@ -225,10 +225,9 @@
                 </li>
               </ul>
               <ul class="instruction-list list-unstyled">
-                <strong>Choux Pastry</strong>
                 <li>
                   <span>2</span>
-                  In a large pot, combine water, butter, salt, and sugar. Heat on medium-high heat until the butter is completely melted.
+                  <b>For the choux pastry: </b>In a large pot, combine water, butter, salt, and sugar. Heat on medium-high heat until the butter is completely melted.
                 </li>
                 <li>
                   <span>3</span>
@@ -260,10 +259,9 @@
                 </li>
                 </ul>
                 <ul class="instruction-list list-unstyled">
-                <strong>Vanilla Custard</strong>
                 <li>
                   <span>10</span>
-                  Add in half of the milk to a medium pot and reserve the other half. To the pot with the milk add in the granulated sugar, vanilla sugar, heavy cream, and vanilla extract. Heat on medium heat until just starting to boil.
+                  <b>For the custard: </b>Add in half of the milk to a medium pot and reserve the other half. To the pot with the milk add in the granulated sugar, vanilla sugar, heavy cream, and vanilla extract. Heat on medium heat until just starting to boil.
                 </li>
                 <li>
                   <span>11</span>
@@ -279,10 +277,9 @@
                 </li>
                 </ul>
                 <ul class="instruction-list list-unstyled">
-                <strong>Assembly</strong>
                 <li>
                   <span>14</span>
-                  Cut each pastry puff horizontally, pipe in the vanilla custard on the bottom piece and top with the top piece. Dust with powdered sugar before serving. Store leftover assembled cream puffs in the refrigerator covered with plastic wrap.
+                  <b>To assemble: </b>Cut each pastry puff horizontally, pipe in the vanilla custard on the bottom piece and top with the top piece. Dust with powdered sugar before serving. Store leftover assembled cream puffs in the refrigerator covered with plastic wrap.
                 </li>
               </ul>
             </div>
