--- a/monkeybread.html
+++ b/monkeybread.html
@@ -220,10 +220,9 @@
             <div class="mt-5">
               <h6>Instructions</h6>
               <ul class="instruction-list list-unstyled">
-                <strong>Dough</strong>
                 <li>
                   <span>1</span>
-                  Mix together the flour, quick-rise yeast, sugar, and salt in a mixing bowl. Put the oil together with the warm milk (110℉) in a glass measuring cup. Slowly add all the oil and milk into the flour mixture while mixing to form a loose dough. Turn onto a lightly floured counter and knead until a smooth dough forms - about 1 minute of kneading.
+                  <b>For the dough: </b>Mix together the flour, quick-rise yeast, sugar, and salt in a mixing bowl. Put the oil together with the warm milk (110℉) in a glass measuring cup. Slowly add all the oil and milk into the flour mixture while mixing to form a loose dough. Turn onto a lightly floured counter and knead until a smooth dough forms - about 1 minute of kneading.
                 </li>
                 <li>
                   <span>2</span>
@@ -247,10 +246,9 @@
                 </li>
               </ul>
               <ul class="instruction-list list-unstyled">
-                <strong>Frosting</strong>
                 <li>
                   <span>7</span>
-                  Beat the butter and cream cheese in a medium bowl with an electric mixer until blended. Add powdered sugar, half-and-half, and vanilla extract, and mix until smooth. Drizzle over warm monkey bread.
+                  <b>For the frosting: </b>Beat the butter and cream cheese in a medium bowl with an electric mixer until blended. Add powdered sugar, half-and-half, and vanilla extract, and mix until smooth. Drizzle over warm monkey bread.
                 </li>
                 <li>
                   <span>8</span>
