--- a/butterbars.html
+++ b/butterbars.html
@@ -194,10 +194,9 @@
                 </li>
               </ul>
               <ul class="instruction-list list-unstyled">
-                <strong>Crust</strong>
                 <li>
                   <span>2</span>
-                  Mix vanilla cake mix, butter, and egg in a large bowl with a fork until mixed together as thoroughly as possible. The texture of the mixture will be dry and clumpy.
+                  <b>For the crust: </b>Mix vanilla cake mix, butter, and egg in a large bowl with a fork until mixed together as thoroughly as possible. The texture of the mixture will be dry and clumpy.
                 </li>
                 <li>
                   <span>3</span>
@@ -205,10 +204,9 @@
                 </li>
               </ul>
               <ul class="instruction-list list-unstyled">
-                <strong>Gooey Filling</strong>
                 <li>
                   <span>4</span>
-                  Set aside about 1/4 cup of the powdered sugar. When you're done mixing, the goo in the bowl should be nice and creamy.
+                  <b>For the filling: </b>Set aside about 1/4 cup of the powdered sugar. When you're done mixing, the goo in the bowl should be nice and creamy.
                 </li>
                 <li>
                   <span>5</span>
@@ -216,10 +214,9 @@
                 </li>
               </ul>
               <ul class="instruction-list list-unstyled">
-                <strong>Assembly</strong>
                 <li>
                   <span>6</span>
-                  Pour the filling over the crust in the pan. Bake for 40 to 45 minutes, or until the top is golden brown.
+                  <b>To assemble: </b>Pour the filling over the crust in the pan. Bake for 40 to 45 minutes, or until the top is golden brown.
                 </li>
                 <li>
                   <span>7</span>
