--- a/hazelnuttruffles.html
+++ b/hazelnuttruffles.html
@@ -155,7 +155,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 tbps (40g) hazelnut spread (I use the brands <a href="https://www.wholefoodsmarket.com/product/365-by-whole-foods-market-organic-hazelnut-cocoa-spread-123-oz-b082tdvptv" style="color: #FF6330">Whole Foods</a> and <a href="https://yummybazaar.com/products/rigoni-di-asiago-nocciolata-organic-hazlenut-spread?variant=36170856140&gclid=CjwKCAiA5Y6eBhAbEiwA_2ZWIdHVEaiNFjzzGVktInh1hkL_hJng89z5yNH88DFix1OvBeqWdIf-BBoC2vMQAvD_BwE" style="color: #FF6330">Rigoni di Asiago</a>)</label>
+                  <label class="form-check-label" for="unsalted">2 tbps (40g) hazelnut spread (I use the brands <a href="https://www.wholefoodsmarket.com/product/365-by-whole-foods-market-organic-hazelnut-cocoa-spread-123-oz-b082tdvptv" style="color: #FF6330">Whole Foods</a> and <a href="https://www.wholefoodsmarket.com/product/nocciolata-organic-hazelnut-spread-with-cocoa-milk-b0016ll5ds" style="color: #FF6330">Rigoni di Asiago</a>)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="unsalted" name="unsalted" class="form-check-input">
