--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </div>
       </div>
     </section>
-    
+
     <section class="tstbite-components my-4 my-md-5">
       <h5 class="py-3 mb-0">Popular Recipes</h5>
       <div class="row">
@@ -243,6 +243,33 @@
             <figcaption class="mt-2">
               <a href="/chocolatechipcookiecake" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Chip Cookie Cake</a>
             </figcaption>
+          </figure>
+        </div>
+      </div>
+    </section>
+
+    <section class="tstbite-components my-4 my-md-5">
+      <h5 class="py-3 mb-0">Honorable Mentions</h5>
+      <div class="row">
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/kab.jpeg" class="rounded-circle" alt="Menu">
+            </a>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/cbkcc.png" class="rounded-circle" alt="Menu">
+            </a>
+          </figure>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/cbksc.png" class="rounded-circle" alt="Menu">
+            </a>
           </figure>
         </div>
       </div>
