--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a href="/" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/kab.jpeg" class="rounded-circle" alt="Menu">
+              <img src="assets/images/food/kb.jpg" class="rounded-circle" alt="Menu">
             </a>
           </figure>
         </div>
