--- a/index.html
+++ b/index.html
@@ -209,6 +209,13 @@
             </a>
           </figure>
         </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a href="/" class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/mjcp.jpg" class="rounded-circle" alt="Menu">
+            </a>
+          </figure>
+        </div>
       </div>
     </section>
   </div>
