--- a/chocolatechipcookiecake.html
+++ b/chocolatechipcookiecake.html
@@ -145,7 +145,7 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>2</span>
-                  <b>For the cookie cake: </b>In a large bowl using a hand-held mixer or stand mixer fittedwith paddle attachment, beat the butter for 1 minute on medium speed until completely smooth and creamy. Add the brown sugar and beat on medium speed until creamy, about 1 minute. Mix in egg, egg yolk, and vanilla on medium-high speed until combined. Scrape down the sides and bottom of the bowl as needed.
+                  In a large bowl using a hand-held mixer or stand mixer fittedwith paddle attachment, beat the butter for 1 minute on medium speed until completely smooth and creamy. Add the brown sugar and beat on medium speed until creamy, about 1 minute. Mix in egg, egg yolk, and vanilla on medium-high speed until combined. Scrape down the sides and bottom of the bowl as needed.
                 </li>
                 <li>
                   <span>3</span>
@@ -160,12 +160,6 @@
                   Decorate the cooled cookie cake with frosting using a Wilton piping bag and tip. Depending how much frosting you use, you may have some leftover. Cookie cake remains fresh covered tightly at room temperature for up to 3 days.
                 </li>
                 </ul>
-                <ul class="instruction-list list-unstyled">
-                <strong>Fudge Frosting</strong>
-                <li>
-                  <span>6</span>
-                  <label class="form-check-label" for="unsalted"><a href="/fudgefrosting" style="color: #FF6330">Fudge Frosting Recipe</a></label>
-                </li>
             </div>
           </div>
         </div>
