--- a/butterbars.html
+++ b/butterbars.html
@@ -164,7 +164,7 @@
                 </div>
               </div>
               <div class="checklist pb-4">
-                <strong>Gooey Filling</strong>
+                <strong>Filling</strong>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="crackers" name="crackers" class="form-check-input">
                   <label class="form-check-label" for="crackers">1 package (8oz) cream cheese, room temperature</label>
