--- a/butterbars.html
+++ b/butterbars.html
@@ -206,20 +206,16 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>4</span>
-                  <b>For the filling: </b>Set aside about 1/4 cup of the powdered sugar. When you're done mixing, the goo in the bowl should be nice and creamy.
-                </li>
-                <li>
-                  <span>5</span>
-                  In a large bowl, mix the softened cream cheese, eggs, and vanilla. Slowly add in the remaining powdered sugar while mixing. When you're done mixing, the filling should be nice and creamy.
+                  <b>For the filling: </b>Set aside about 1/4 cup of the powdered sugar. In a large bowl, mix the softened cream cheese, eggs, and vanilla. Slowly add in the remaining powdered sugar while mixing. When you're done mixing, the filling should be nice and creamy.
                 </li>
               </ul>
               <ul class="instruction-list list-unstyled">
                 <li>
-                  <span>6</span>
+                  <span>5</span>
                   <b>To assemble: </b>Pour the filling over the crust in the pan. Bake for 40 to 45 minutes, or until the top is golden brown.
                 </li>
                 <li>
-                  <span>7</span>
+                  <span>6</span>
                   Remove the bars from the oven and let them cool. The filling will appear puffy, but will settle upon cooling. After about 10 minutes or so, sprinkle the remaining 1/4 cup powdered sugar over the top. Cool completely before serving.
                 </li>
               </ul>
